2005-01-28  Jordi Mallach  <jordi@sindominio.net>

	* ca.po: Updated Catalan translation by
	Xavier Conde Rueda <xaviconde@eresmas.com>.

2005-01-25 Marco Ciampa <ciampix@libero.it>

	* it.po: updated italian translation.

2005-01-24  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-01-18  Alexander Shopov  <ash@contact.bg>

	* bg.po: Initial bg.po file

2005-01-13  Sven Neumann  <sven@gimp.org>

	* ru.po: fixed fatal error.

2005-01-10  Vaelk Filippov  <frob@df.ru>

	* ru.po: Updated russian translation by Anatoly (Doc) Yakushin.

2004-12-20  Jarkko Ranta  <jjranta@cc.joensuu.fi>

	* fi.po: Updated Finnish translation by Mikko Paananen.

2004-12-17  Artur Flinta  <aflinta@cvs.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.

2004-12-12  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2004-12-07  Peteris Krisjanis  <pecisk@gmail.com>

	* lv.po: Updated Latvian translation
	by Gatis Kalnins <gatis.kalnins@metatrons.org>

2004-12-04  Sigurd Gartmann  <sigurd-translate@brogar.org>

	* no.po: Updated Norwegian Bokmål translation.
	* nb.po: Updated Norwegian Bokmål translation.

2004-12-02  Laszlo Dvornik  <dvornik@gnome.hu>

	* hu.po: Hungarian translation updated by Arpad Biro.

2004-12-01  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Fixed Slovak translation.

2004-11-30 Marco Ciampa <ciampix@libero.it>

	* it.po: updated italian translation.

2004-11-26  Sven Neumann  <sven@gimp.org>

	* sk.po: reverted last commit, it only contained binary gibberish.

2004-11-26  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation by Zdeno Podobny.

2004-11-24  Cai Qian  <caiqian@gnome.org>

	* zh_CN.po: updated Simplified Chinese translation.

2004-11-24  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* ru.po: Updated Russian translation
	from Russian team <gnome-cyr@gnome.org>.

2004-11-21  David Lodge <dave@cirt.net>
